--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -19,7 +19,7 @@
 
 ; 13 Sept 2024 fixed some invalid entries in the trigger section
 
-; 12 Oct 2024 Fixed numerous issues with the fuel system
+; 13 Oct 2024 Fixed numerous issues with the fuel system
 
 [VERSION]
 major = 1
@@ -151,16 +151,16 @@ Engine.1 = Name:LeftOuterEngine#Index:1
 Engine.2 = Name:LeftInnerEngine#Index:2
 Engine.3 = Name:RightInnerEngine#Index:3
 Engine.4 = Name:RightOuterEngine#Index:4
-Tank.1 = Name:LeftOuter#Title:LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,-100.0,8.5#Priority:2#InputOnlyLines:LeftOuterFwdXferValveToLeftOuterTank,LeftOuterAftXferValve2ToLeftOuterTank#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
-Tank.2 = Name:Feed1#Title:FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1,LeftOuterEmerXferValveToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
-Tank.3 = Name:LeftMid#Title:LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,-45.9,5.9#Priority:3#InputOnlyLines:LeftMidFwdXferValveToLeftMidTank,LeftMidAftXferValve2ToLeftMidTank#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
-Tank.4 = Name:LeftInner#Title:LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,-24.7,3.2#Priority:4#InputOnlyLines:LeftInnerFwdXferValveToLeftInnerTank,LeftInnerAftXferValve2ToLeftInnerTank#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
-Tank.5 = Name:Feed2#Title:FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:27.3,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
-Tank.6 = Name:Feed3#Title:FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:27.3,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
-Tank.7 = Name:RightInner#Title:RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,24.7,3.2#Priority:4#InputOnlyLines:RightInnerFwdXferValveToRightInnerTank,RightInnerAftXferValve2ToRightInnerTank#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
-Tank.8 = Name:RightMid#Title:RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,45.9,5.9#Priority:3#InputOnlylines:RightMidFwdXferValveToRightMidTank,RightMidAftXferValve2ToRightMidTank#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
-Tank.9 = Name:Feed4#Title:FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
-Tank.10 = Name:RightOuter#Title:RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,100,8.5#Priority:2#InputOnlyLines:RightOuterFwdXferValveToRightOuterTank,RightOuterAftXferValve2ToRightOuterTank#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
+Tank.1 = Name:LeftOuter#Title:LEFT OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,-100.0,8.5#Priority:2#InputOnlyLines:LeftOuterFwdXferValveToLeftOuterTank,LeftOuterAftXferValve2ToLeftOuterTank#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
+Tank.2 = Name:Feed1#Title:FEED ONE#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1,LeftOuterEmerXferValveToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
+Tank.3 = Name:LeftMid#Title:LEFT MID#Capacity:9632#UnusableCapacity:0#Position:7.1,-45.9,5.9#Priority:3#InputOnlyLines:LeftMidFwdXferValveToLeftMidTank,LeftMidAftXferValve2ToLeftMidTank#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
+Tank.4 = Name:LeftInner#Title:LEFT INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,-24.7,3.2#Priority:4#InputOnlyLines:LeftInnerFwdXferValveToLeftInnerTank,LeftInnerAftXferValve2ToLeftInnerTank#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
+Tank.5 = Name:Feed2#Title:FEED TWO#Capacity:7753.2.#UnusableCapacity:0#Position:27.3,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
+Tank.6 = Name:Feed3#Title:FEED THREE#Capacity:7753.2#UnusableCapacity:0#Position:27.3,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
+Tank.7 = Name:RightInner#Title:RIGHT INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,24.7,3.2#Priority:4#InputOnlyLines:RightInnerFwdXferValveToRightInnerTank,RightInnerAftXferValve2ToRightInnerTank#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
+Tank.8 = Name:RightMid#Title:RIGHT MID#Capacity:9632#UnusableCapacity:0#Position:7.1,45.9,5.9#Priority:3#InputOnlylines:RightMidFwdXferValveToRightMidTank,RightMidAftXferValve2ToRightMidTank#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
+Tank.9 = Name:Feed4#Title:FEED FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
+Tank.10 = Name:RightOuter#Title:RIGHT OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,100,8.5#Priority:2#InputOnlyLines:RightOuterFwdXferValveToRightOuterTank,RightOuterAftXferValve2ToRightOuterTank#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
 Tank.11 = Name:Trim#Title:TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.14,0,12.1#Priority:1#InputOnlyLines:TrimTankInletValve1ToTrimTank,TrimTankInletValve2ToTrimTank#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
 Line.1 = Name:FeedTank1ToFeed1TankPump1#Source:Feed1#Destination:Feed1TankPump1
 Line.2 = Name:FeedTank1ToFeed1TankPump2#Source:Feed1#Destination:Feed1TankPump2
@@ -203,7 +203,7 @@ Line.38 = Name:TrimTankPumpRightToTrimLineJunction1#Source:TrimTankPumpRight#Des
 Line.39 = Name:TrimLineJunction1ToTrimLineJunction2#Source:TrimLineJunction1#Destination:TrimLineJunction2
 Line.40 = Name:TrimLineJunction1ToTrimTankInletValve1#Source:TrimLineJunction1#Destination:TrimTankInletValve1 ;line re-purposed
 Line.41 = Name:TrimLineJunction2ToTrimLineIsoValveFwd#Source:TrimLineJunction2#Destination:TrimLineIsolationValveFwd
-Line.42 = Name:TrimLineJunction2ToTrimLineIsoValveAft_1#Source:TrimLineJunction2#Destination:TrimLineIsolationValveAft_1; For normal trim tank transfers line re-purposed
+Line.42 = Name:TrimLineJunction2ToTrimLineIsoValveAft_1#Source:TrimLineJunction2#Destination:TrimLineIsolationValveAft_1; For normal trim tank transfers
 Line.43 = Name:LeftOuterTankPumpToFwdGalleryJunction#Source:LeftOuterTankPump#Destination:FwdGalleryJunction
 Line.44 = Name:LeftMidTankPumpFwdToFwdGalleryJunction#Source:LeftMidTankPumpFwd#Destination:FwdGalleryJunction
 Line.45 = Name:LeftMidTankPumpAftToAftGalleryJunction#Source:LeftMidTankPumpAft#Destination:AftGalleryJunction
@@ -215,7 +215,7 @@ Line.50 = Name:RightMidTankPumpAftToAftGalleryJunction#Source:RightMidTankPumpAf
 Line.51 = Name:RightInnerTankPumpFwdToFwdGalleryJunction#Source:RightInnerTankPumpFwd#Destination:FwdGalleryJunction
 Line.52 = Name:RightInnerTankPumpAftToAftGalleryJunction#Source:RightInnerTankPumpAft#Destination:AftGalleryJunction
 Line.53 = Name:TrimLineIsoValveFwdToFwdGalleryJunction#Source:TrimLineIsolationValveFwd#Destination:FwdGalleryJunction
-Line.54 = Name:TrimLineIsoValveAft_1ToAftGalleryJunction#Source:TrimLineIsolationValveAft_1#Destination:AftGalleryJunction  ; line re-purposed
+Line.54 = Name:TrimLineIsoValveAft_1ToAftGalleryJunction#Source:TrimLineIsolationValveAft_1#Destination:AftGalleryJunction
 Line.55 = Name:FwdGalleryJunctionToFeedTank1FwdXferValve1#Source:FwdGalleryJunction#Destination:FeedTank1FwdTransferValve1
 Line.56 = Name:FwdGalleryJuncToFeedTanks2_3Junc1#Source:FwdGalleryJunction#Destination:FeedTanks2_3Junction1
 Line.57 = Name:FeedTanks2_3Junc1ToFeedTank2FwdXferValve1_1#Source:FeedTanks2_3Junction1#Destination:FeedTank2FwdTransferValve1_1
@@ -309,11 +309,11 @@ Line.144 = Name:LeftOuterEmerXferValveToFeedTank1#Source:LeftOuterEmerTransferVa
 Line.145 = Name:RightOuterEmerXferValveToFeedTank4#Source:RightOuterEmerTransferValve#Destination:Feed4#GravityBasedFuelFlow:500
 Line.146 = Name:AftGalleryJunctionToJetissonNozzleValveLeft#Source:AftGalleryJunction#Destination:JettisonNozzleValveLeft
 Line.147 = Name:AftGalleryJunctionToJetissonNozzleValveRight#Source:AftGalleryJunction#Destination:JettisonNozzleValveRight
-Line.148 = Name:TrimTankInletValve1ToTrimTank#Source:TrimTankInletValve1#Destination:Trim   ; new
-Line.149 = Name:TrimTankInletValve2ToTrimTank#Source:TrimTankInletValve2#Destination:Trim    ;new
-Line.150 = Name:TrimLineJunction2ToTrimLineIsoValveAft_2#Source:TrimLineJunction2#Destination:TrimLineIsolationValveAft_2; For CG control    new
-Line.151 = Name:TrimLineJunction1ToTrimTankInletValve2#Source:TrimLineJunction1#Destination:TrimTankInletValve2    ; new
-Line.152 = Name:TrimLineIsoValveAft_2ToAftGalleryJunction#Source:TrimLineIsolationValveAft_2#Destination:AftGalleryJunction    ; new
+Line.148 = Name:TrimTankInletValve1ToTrimTank#Source:TrimTankInletValve1#Destination:Trim
+Line.149 = Name:TrimTankInletValve2ToTrimTank#Source:TrimTankInletValve2#Destination:Trim
+Line.150 = Name:TrimLineJunction2ToTrimLineIsoValveAft_2#Source:TrimLineJunction2#Destination:TrimLineIsolationValveAft_2; Used for CG trim tank transfers
+Line.151 = Name:TrimLineJunction1ToTrimTankInletValve2#Source:TrimLineJunction1#Destination:TrimTankInletValve2
+Line.152 = Name:TrimLineIsoValveAft_2ToAftGalleryJunction#Source:TrimLineIsolationValveAft_2#Destination:AftGalleryJunction
 
 Junction.1 = Name:Junction1#InputOnlyLines:Pump1Feed1ToJunc1,Pump2Feed1ToJunc1#OutputOnlyLines:Junc1ToEng1LPValve
 Junction.2 = Name:Junction2#InputOnlyLines:Pump1Feed2ToJunc2,Pump2Feed2ToJunc2#OutputOnlyLines:Junc2ToEng2LPValve
@@ -391,7 +391,7 @@ Valve.56 = Name:TransferDefuelValve#OpeningTime:3#Circuit:56
 Valve.57 = Name:JettisonNozzleValveLeft#Circuit:57
 Valve.58 = Name:JettisonNozzleValveRight#Circuit:58
 Valve.59 = Name:TrimLineIsolationValveAft_2#Circuit:59#DestinationLine:TrimLineIsoValveAft_2ToAftGalleryJunction 
-Valve.60 = Name:TrimTankInletValve2#Circuit:60#DestinationLine:TrimTankInletValve2ToTrimTank#Source   
+Valve.60 = Name:TrimTankInletValve2#Circuit:60#DestinationLine:TrimTankInletValve2ToTrimTank
 
 
 Pump.1 = Name:Feed1TankPump1#Pressure:30#DestinationLine:Pump1Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:1
@@ -422,10 +422,10 @@ Trigger.3 = Name:InnerandMidTanksXferFeed3Start#Target:Feed3#Threshold:6857#Cond
 Trigger.4 = Name:InnerandMidTanksXferFeed4Start#Target:Feed4#Threshold:6436#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank4FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve2,StartPump.LeftInnerTankPumpFwd,StartPump.RightInnerTankPumpFwd,SetJunction.FwdGalleryJunction.2
 Trigger.5 = Name:Equalize1and4#Target:Feed1,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank1FwdTransferValve2,OpenValve.FeedTank4FwdTransferValve2,OpenValve.FeedTank1AftTransferValve1,OpenValve.FeedTank4AftTransferValve1
 Trigger.6 = Name:Equalize2and3#Target:Feed2,Feed3#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve2_1,OpenValve.FeedTank3FwdTransferValve2_1,OpenValve.FeedTank2FwdTransferValve2_2,OpenValve.FeedTank3FwdTransferValve2_2,OpenValve.FeedTank2AftTransferValve1,OpenValve.FeedTank3AftTransferValve1
-Trigger.7 = Name:Innerand MidTanksXferFeed1and4End#Target:Feed1#Threshold:6765#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1  ;
+Trigger.7 = Name:Innerand MidTanksXferFeed1and4End#Target:Feed1#Threshold:6765#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1
 Trigger.8 = Name:InnerandMidTanksXferFeed2and3End#Target:Feed2#Threshold:7186#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
 Trigger.9 = Name:InnerandMidTanksXferFeed2and3EndRedundant#Target:Feed3#Threshold:7187#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
-Trigger.10 = Name:InnerandMidTanksXferFeed1and4EndRedundant#Target:Feed4#Threshold:6766#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1  ; 
+Trigger.10 = Name:InnerandMidTanksXferFeed1and4EndRedundant#Target:Feed4#Threshold:6766#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1
 Trigger.11 = Name:InnerTankLeftEmpty#Target:LeftInner#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.LeftInnerTankPumpFwd,StartPump.LeftMidTankPumpFwd,CloseValve.LeftInnerAftTransferValve2,OpenValve.LeftMidAftTransferValve2#EffectFalse:OpenValve.LeftInnerAftTransferValve2,CloseValve.LeftMidAftTransferValve2,StopPump.LeftMidTankPumpFwd,StartPump.LeftInnerTankPumpFwd
 Trigger.12 = Name:InnerTankRightEmpty#Target:RightInner#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.RightInnerTankPumpFwd,StartPump.RightMidTankPumpFwd,CloseValve.RightInnerAftTransferValve2,OpenValve.RightMidAftTransferValve2#EffectFalse:OpenValve.RightInnerAftTransferValve2,CloseValve.RightMidAftTransferValve2,StopPump.RightMidTankPumpFwd,StartPump.RightInnerTankPumpFwd
 Trigger.13 = Name:MidTanksBelow8000#Target:LeftMid#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_1,SetJunction.FeedTanks2_3Junction1.2,SetJunction.FeedTanks2_3Junction2.2#EffectFalse:SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
