--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -328,7 +328,7 @@ Junction.8 = Name:FeedTanks2_3Junction1#InputOnlyLines:FwdGalleryJuncToFeedTanks
 
 Junction.9 = Name:FeedTanks2_3Junction2#InputOnlyLines:FwdGalleryJuncToFeedTanks2_3Junc2#OutputOnlyLines:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_2,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_2#Option:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_1#Option:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_2,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_2#Option:FwdGalleryJuncToFeedTanks2_3Junc2
 
-Junction.10 = Name:AftGalleryJunction#InputOnlyLines:LeftMidTankPumpAftToAftGalleryJunction,LeftInnerTankPumpAftToAftGalleryJunction,RightMidTankPumpAftToAftGalleryJunction,RightInnerTankPumpAftToAftGalleryJunction,TrimLineIsoValveAft_1ToAftGalleryJunction,TrimLineIsoValveAft_2ToAftGalleryJunction#OutputOnlyLines:AftGalleryJunctionToFeedTank1AftXferValve1,AftGalleryJunctionToFeedTank2AftXferValve1,AftGalleryJunctionToFeedTank3AftXferValve1,AftGalleryJunctionToFeedTank4AftXferValve1,AftGalleryJunctionToLeftInnerAftXferValve1,AftGalleryJunctionToLeftMidAftXferValve1,AftGalleryJunctionToLeftOuterAftXferValve1,AftGalleryJunctionToRightInnerAftXferValve1,AftGalleryJunctionToRightMidAftXferValve1,AftGalleryJunctionToRightOuterAftXferValve1,AftGalleryJunctionToJetissonNozzleValveLeft,AftGalleryJunctionToJetissonNozzleValveRight
+Junction.10 = Name:AftGalleryJunction#InputOnlyLines:LeftMidTankPumpAftToAftGalleryJunction,LeftInnerTankPumpAftToAftGalleryJunction,RightMidTankPumpAftToAftGalleryJunction,RightInnerTankPumpAftToAftGalleryJunction,TrimLineIsoValveAft_1ToAftGalleryJunction,TrimLineIsoValveAft_2ToAftGalleryJunction#OutputOnlyLines:AftGalleryJunctionToFeedTank1AftXferValve1,AftGalleryJunctionToFeedTank2AftXferValve1,AftGalleryJunctionToFeedTank3AftXferValve1,AftGalleryJunctionToFeedTank4AftXferValve1,AftGalleryJunctionToLeftInnerAftXferValve1,AftGalleryJunctionToLeftMidAftXferValve1,AftGalleryJunctionToLeftOuterAftXferValve1,AftGalleryJunctionToRightInnerAftXferValve1,AftGalleryJunctionToRightMidAftXferValve1,AftGalleryJunctionToRightOuterAftXferValve1,AftGalleryJunctionToJetissonNozzleValveLeft,AftGalleryJunctionToJetissonNozzleValveRight#Option:AftGalleryJunctionToLeftInnerAftXferValve1,AftGalleryJunctionToRightInnerAftXferValve1,AftGalleryJunctionToLeftOuterAftXferValve1,AftGalleryJunctionToRightOuterAftXferValve1,AftGalleryJunctionToJetissonNozzleValveLeft,AftGalleryJunctionToJetissonNozzleValveRight#Option:AftGalleryJunctionToLeftMidAftXferValve1,AftGalleryJunctionToLeftOuterAftXferValve1,AftGalleryJunctionToRightMidAftXferValve1,AftGalleryJunctionToRightOuterAftXferValve1,AftGalleryJunctionToJetissonNozzleValveLeft,AftGalleryJunctionToJetissonNozzleValveRight#Option:AftGalleryJunctionToFeedTank1AftXferValve1,AftGalleryJunctionToFeedTank2AftXferValve1,AftGalleryJunctionToFeedTank3AftXferValve1,AftGalleryJunctionToFeedTank4AftXferValve1,AftGalleryJunctionToLeftOuterAftXferValve1,AftGalleryJunctionToRightOuterAftXferValve1,AftGalleryJunctionToJetissonNozzleValveLeft,AftGalleryJunctionToJetissonNozzleValveRight#Option:AftGalleryJunctionToLeftInnerAftXferValve1,AftGalleryJunctionToRightInnerAftXferValve1#Option:AftGalleryJunctionToLeftMidAftXferValve1,AftGalleryJunctionToRightMidAftXferValve1#Option:AftGalleryJunctionToFeedTank1AftXferValve1,AftGalleryJunctionToFeedTank2AftXferValve1,AftGalleryJunctionToFeedTank3AftXferValve1,AftGalleryJunctionToFeedTank4AftXferValve1
 Junction.11 = Name:CrossFeedJunc1
 Junction.12 = Name:CrossFeedJunc2
 
@@ -469,7 +469,7 @@ Trigger.42 = Name:CGControlTransferEnd#Condition:Manual#EffectTrue:CloseValve.Tr
 ;Trigger.8 = Name:InnerandMidTanksXferFeed2and3End#Target:Feed2#Threshold:7186#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
 ;Trigger.9 = Name:InnerandMidTanksXferFeed2and3EndRedundant#Target:Feed3#Threshold:7187#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
 ;Trigger.10 = Name:InnerandMidTanksXferFeed1and4EndRedundant#Target:Feed4#Threshold:6766#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1
-;Trigger.11 = Name:InnerTankLeftEmpty#Target:LeftInner#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.LeftInnerTankPumpFwd,StartPump.LeftMidTankPumpFwd,CloseValve.LeftInnerAftTransferValve2,OpenValve.LeftMidAftTransferValve2#EffectFalse:OpenValve.LeftInnerAftTransferValve2,CloseValve.LeftMidAftTransferValve2,StopPump.LeftMidTankPumpFwd,StartPump.LeftInnerTankPumpFwd
+;Trigger.11 = Name:InnerTankLeftEmpty#Target:LeftInner#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.LeftInnerTankPumpFwd,StartPump.LeftMidTankPumpFwd,CloseValve.LeftInnerAftTransferValve2,OpenValve.LeftMidAftTransferValve2,SetJunction.AftGalleryJunction.2#EffectFalse:OpenValve.LeftInnerAftTransferValve2,CloseValve.LeftMidAftTransferValve2,StopPump.LeftMidTankPumpFwd,StartPump.LeftInnerTankPumpFwd,SetJunction.AftGalleryJunction.1
 ;Trigger.12 = Name:InnerTankRightEmpty#Target:RightInner#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.RightInnerTankPumpFwd,StartPump.RightMidTankPumpFwd,CloseValve.RightInnerAftTransferValve2,OpenValve.RightMidAftTransferValve2#EffectFalse:OpenValve.RightInnerAftTransferValve2,CloseValve.RightMidAftTransferValve2,StopPump.RightMidTankPumpFwd,StartPump.RightInnerTankPumpFwd
 ;Trigger.13 = Name:MidTanksBelow8000#Target:LeftMid#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_1,SetJunction.FeedTanks2_3Junction1.2,SetJunction.FeedTanks2_3Junction2.2#EffectFalse:SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
 ;Trigger.14 = Name:MidBelow8000ThresholdFeed2Start#Target:Feed2#Threshold:6436#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve1_2,OpenValve.FeedTank2FwdTransferValve2_2
@@ -480,7 +480,7 @@ Trigger.42 = Name:CGControlTransferEnd#Condition:Manual#EffectTrue:CloseValve.Tr
 ;Trigger.19 = Name:Equalize1and2forMidBelow8000#Target:Feed1,Feed2#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank1FwdTransferValve1,OpenValve.FeedTank1FwdTransferValve2,OpenValve.OpenValve.FeedTank2FwdTransferValve2_2
 ;Trigger.20 = Name:Equalize2and4forMidBelow8000#Target:Feed2,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve2_2,OpenValve.FeedTank4FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve2
 ;Trigger.21 = Name:Equalize3and4forMidBelow8000#Target:Feed3,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank3FwdTransferValve2_2,OpenValve.FeedTank4FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve2
-;Trigger.22 = Name:MidTankLeftEmpty#Target:LeftMid#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.LeftMidTankPumpFwd,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1,CloseValve.LeftMidAftTransferValve2,OpenValve.FeedTank1AftTransferValve2,OpenValve.FeedTank2AftTransferValve2,OpenValve.FeedTank3AftTransferValve2,OpenValve.FeedTank4AftTransferValve2#EffectFalse:CloseValve.FeedTank1AftTransferValve2,CloseValve.FeedTank2AftTransferValve2,CloseValve.FeedTank3AftTransferValve2,CloseValve.FeedTank4AftTransferValve2,OpenValve.LeftMidAftTransferValve2,StartPump.LeftMidTankPumpFwd
+;Trigger.22 = Name:MidTankLeftEmpty#Target:LeftMid#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.LeftMidTankPumpFwd,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1,CloseValve.LeftMidAftTransferValve2,OpenValve.FeedTank1AftTransferValve2,OpenValve.FeedTank2AftTransferValve2,OpenValve.FeedTank3AftTransferValve2,OpenValve.FeedTank4AftTransferValve2,SetJunction.AftGalleryJunction.3#EffectFalse:CloseValve.FeedTank1AftTransferValve2,CloseValve.FeedTank2AftTransferValve2,CloseValve.FeedTank3AftTransferValve2,CloseValve.FeedTank4AftTransferValve2,OpenValve.LeftMidAftTransferValve2,StartPump.LeftMidTankPumpFwd
 ;Trigger.23 = Name:MidTankRightEmpty#Target:RightMid#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.RightMidTankPumpFwd,CloseValve.RightMidAftTransferValve2,OpenValve.FeedTank1AftTransferValve2,OpenValve.FeedTank2AftTransferValve2,OpenValve.FeedTank3AftTransferValve2,OpenValve.FeedTank4AftTransferValve2#EffectFalse:CloseValve.FeedTank1AftTransferValve2,CloseValve.FeedTank2AftTransferValve2,CloseValve.FeedTank3AftTransferValve2,CloseValve.FeedTank4AftTransferValve2,OpenValve.RightMidAftTransferValve2,StartPump.RightMidTankPumpFwd
 ;Trigger.24 = Name:TrimTankTransferToFeedTank1#Target:Feed1#Threshold:1974#Condition:TankQuantityBelow#EffectTrue:OpenValve.TrimLineIsolationValveAft_1,OpenValve.FeedTank1AftTransferValve1,StartPump.TrimTankPumpLeft,StartPump.TrimTankPumpRight,CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve1_2,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve1_2,CloseValve.FeedTank3FwdTransferValve2_2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.3
 ;Trigger.25 = Name:TrimTankTransferToFeedTank2#Target:Feed2#Threshold:1974#Condition:TankQuantityBelow#EffectTrue:OpenValve.TrimLineIsolationValveAft_1,OpenValve.FeedTank2AftTransferValve1,StartPump.TrimTankPumpLeft,StartPump.TrimTankPumpRight,CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve1_2,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve1_2,CloseValve.FeedTank3FwdTransferValve2_2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FeedTanks2_3Junction1.3,SetJunction.FeedTanks2_3Junction2.3
@@ -576,10 +576,10 @@ lift_coef_pitch_rate = -47.338 ; The change in lift per change in pitch rate
 lift_coef_daoa = 0 ; lift per change in angle of attack rate
 lift_coef_delta_elevator = -1.143 ; The change in lift per change in elevator deflection
 lift_coef_horizontal_incidence = 0 ; The change in lift per change in horizontal incidence angle
-lift_coef_flaps = 1.905 ; Change in lift due to flaps 1.715  1.695
+lift_coef_flaps = 1.905 ; Change in lift due to flaps 
 lift_coef_spoilers = -0.546875 ; Change in lift due to spoilers
-drag_coef_zero_lift = 0.015 ; The zero lift drag polar 0.0187 0.021 0.011 0.008
-drag_coef_flaps = 0.0706; 0.0621 0.0641 0.0656 0.3986 0.4096
+drag_coef_zero_lift = 0.015 ; The zero lift drag polar 
+drag_coef_flaps = 0.0706
 drag_coef_gear = 0.0872
 drag_coef_spoilers = 0.04775;  ; Change in drag due to spoilers
 side_force_slip_angle = -0.624 ; (yaw angle) The change in side force per change in side slip angle
@@ -615,7 +615,7 @@ yaw_moment_delta_rudder_trim_scalar = 0.753 ; Change in yaw moment due to rudder
 compute_aero_center = 0
 aero_center_lift = 11 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.138, 0.139:1.32, 0.2:1.48, 0.26:1.76, 0.29:1.750, 0.32:1.60, 0.5:1.50, 3.15:0
-lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1 ; changed from 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
+lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1
 lift_coef_mach_table = 0:1
 lift_coef_delta_elevator_mach_table = 0:0
 lift_coef_daoa_mach_table = 0:0
@@ -658,7 +658,7 @@ elevator_scaling_table = 0:1 ; scales control based on its deflection
 aileron_scaling_table = 0:1 ; scales control based on its deflection
 rudder_scaling_table = 0:1 ; scales control based on its deflection
 aileron_load_factor_effectiveness_table = 0:1 ; scaling of roll_moment_delta_aileron versus gravity forces, G effects on aileron effectiveness, acts on roll_moment_delta_aileron
-lift_coef_at_drag_zero = 0.12500; 0.075
+lift_coef_at_drag_zero = 0.12500
 lift_coef_at_drag_zero_flaps = 0.40000
 ;elevator_lift_coef = 0.5 ; Defines elevator lift vs elevator angle-of-attack
 ;rudder_lift_coef = 0.5 ; Defines rudder lift vs rudder angle-of-attack
@@ -669,12 +669,12 @@ lift_coef_at_drag_zero_flaps = 0.40000
 modern_fm_only = 1; 1 (true) forces use of modern flight model regardless of what user selected in MSFS options menu. 0 (false) allows use of user-selected flight model
 ;empty_cg_deviation_limit = 20 ; Maximum deviation of empty weight cg allowed in wegiht & balance UI menu (in feet)
 ;icing_scalar = 1 ; Scales effect of icing on lift and weight
-cruise_lift_scalar = 0.81; 1 0.7 0.84
-parasite_drag_scalar = 1; 0.001
+cruise_lift_scalar = 0.81
+parasite_drag_scalar = 1
 induced_drag_scalar = 1
 flap_induced_drag_scalar = 0.5
 elevator_effectiveness = 1
-elevator_maxangle_scalar = 0.7;1
+elevator_maxangle_scalar = 0.7
 aileron_effectiveness = 1
 rudder_effectiveness = 0.16
 rudder_maxangle_scalar = 1
