--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -354,14 +354,14 @@ Valve.19 = Name:LeftOuterFwdTransferValve#Circuit:19
 Valve.20 = Name:RightInnerFwdTransferValve#Circuit:20
 Valve.21 = Name:RightMidFwdTransferValve#Circuit:21
 Valve.22 = Name:RightOuterFwdTransferValve#Circuit:22
-Valve.23 = Name:FeedTank1AftTransferValve1#Circuit:23 ; for main transfers from trim tank
-Valve.24 = Name:FeedTank2AftTransferValve1#Circuit:24 ; for main transfers from trim tank
-Valve.25 = Name:FeedTank3AftTransferValve1#Circuit:25 ; for main transfers from trim tank
-Valve.26 = Name:FeedTank4AftTransferValve1#Circuit:26 ; for main transfers from trim tank
-Valve.27 = Name:FeedTank1AftTransferValve2#Circuit:27 ; for CG transfers from trim tank
-Valve.28 = Name:FeedTank2AftTransferValve2#Circuit:28 ; for CG transfers from trim tank
-Valve.29 = Name:FeedTank3AftTransferValve2#Circuit:29 ; for CG transfers from trim tank
-Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30 ; for CG transfers from trim tank
+Valve.23 = Name:FeedTank1AftTransferValve1#Circuit:23#DestinationLine:FeedTank1AftXferValve1ToFeedTank1AftXferValve2 
+Valve.24 = Name:FeedTank2AftTransferValve1#Circuit:24#DestinationLine:FeedTank2AftXferValve1ToFeedTank2AftXferValve2
+Valve.25 = Name:FeedTank3AftTransferValve1#Circuit:25#DestinationLine:FeedTank3AftXferValve1ToFeedTank3AftXferValve2
+Valve.26 = Name:FeedTank4AftTransferValve1#Circuit:26#DestinationLine:FeedTank4AftXferValve1ToFeedTank4AftXferValve2k
+Valve.27 = Name:FeedTank1AftTransferValve2#Circuit:27#DestinationLine:FeedTank1AftXferValve2ToFeedTank1
+Valve.28 = Name:FeedTank2AftTransferValve2#Circuit:28#DestinationLine:FeedTank2AftXferValve2ToFeedTank2
+Valve.29 = Name:FeedTank3AftTransferValve2#Circuit:29#DestinationLine:FeedTank3AftXferValve2ToFeedTank3
+Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30DestinationLine:FeedTank4AftXferValve2ToFeedTank4
 Valve.31 = Name:LeftInnerAftTransferValve1#Circuit:31
 Valve.32 = Name:LeftMidAftTransferValve1#Circuit:32
 Valve.33 = Name:LeftOuterAftTransferValve1#Circuit:33
@@ -490,11 +490,11 @@ Trigger.42 = Name:CGControlTransferEnd#Condition:Manual#EffectTrue:CloseValve.Tr
 ;Trigger.29 = Name:Equalize1and2#Target:Feed1,Feed2#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank1AftTransferValve1,OpenValve.FeedTank2AftTransferValve1
 ;Trigger.30 = Name:Equalize2and4#Target:Feed2,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank2AftTransferValve1,OpenValve.FeedTank4AftTransferValve1
 ;Trigger.31 = Name:Equalize3and4#Target:Feed3,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank3AftTransferValve1,OpenValve.FeedTank4AftTransferValve1
-;Trigger.32 = Name:TrimTankEmpty#Target:Trim#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.TrimTankPumpLeft,StopPump.TrimTankPumpRight,CloseValve.TrimLineIsolationValveAft,StartPump.LeftOuterTankPump,StartPump.RightOuterTankPump,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1#EffectFalse:StopPump.RightOuterTankPump,StopPump.LeftOuterTankPump,OpenValve.TrimLineIsolationValveAft
-;Trigger.33 = Name:OuterTanksTransferToFeedTank1&4Start1#Target:Feed1#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank1FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve1,SetJunction.FwdGalleryJunction.1
-;Trigger.34 = Name:OuterTanksTransferToFeedTank2&3Start2#Target:Feed2#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve1_1,OpenValve.FeedTank3FwdTransferValve1_1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
-;Trigger.35 = Name:OuterTanksTransferToFeedTank1&4Start4#Target:Feed4#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank1FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve1,SetJunction.FwdGalleryJunction.1
-;Trigger.36 = Name:OuterTanksTransferToFeedTank2&3Start3#Target:Feed3#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve1_1,OpenValve.FeedTank3FwdTransferValve1_1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
+;Trigger.32 = Name:TrimTankEmpty#Target:Trim#Threshold:0.1#Condition:TankQuantityBelow#EffectTrue:StopPump.TrimTankPumpLeft,StopPump.TrimTankPumpRight,CloseValve.TrimLineIsolationValveAft,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1#EffectFalse:StopPump.RightOuterTankPump,StopPump.LeftOuterTankPump,OpenValve.TrimLineIsolationValveAft
+;Trigger.33 = Name:OuterTanksTransferToFeedTank1&4Start1#Target:Feed1#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:StartPump.LeftOuterTankPump,StartPump.RightOuterTankPump,OpenValve.FeedTank1FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve1,SetJunction.FwdGalleryJunction.1
+;Trigger.34 = Name:OuterTanksTransferToFeedTank2&3Start2#Target:Feed2#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:StartPump.LeftOuterTankPump,StartPump.RightOuterTankPump,OpenValve.FeedTank2FwdTransferValve1_1,OpenValve.FeedTank3FwdTransferValve1_1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
+;Trigger.35 = Name:OuterTanksTransferToFeedTank1&4Start4#Target:Feed4#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:StartPump.LeftOuterTankPump,StartPump.RightOuterTankPump,OpenValve.FeedTank1FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve1,SetJunction.FwdGalleryJunction.1
+;Trigger.36 = Name:OuterTanksTransferToFeedTank2&3Start3#Target:Feed3#Threshold:1316#Condition:TankQuantityBelow#EffectTrue:StartPump.LeftOuterTankPump,StartPump.RightOuterTankPump,OpenValve.FeedTank2FwdTransferValve1_1,OpenValve.FeedTank3FwdTransferValve1_1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction2.1
 ;Trigger.37 = Name:OuterTanksTransferToFeedTank1End#Target:Feed1#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1
 ;Trigger.38 = Name:OuterTanksTransferToFeedTank2End#Target:Feed2#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1
 ;Trigger.39 = Name:OuterTanksTransferToFeedTank3End#Target:Feed3#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank3FwdTransferValve1_1
